--- a/Project/views/user/cart.ejs
+++ b/Project/views/user/cart.ejs
@@ -83,7 +83,7 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <h6>Rs.<%=element.product.price%>
+                                        <h6>Rs.<%=element.product.discountedPrice%>
                                         </h6>
                                     </td>
                                     <td>
