--- a/Project/views/user/checkoutpage.ejs
+++ b/Project/views/user/checkoutpage.ejs
@@ -1,13 +1,13 @@
 <%-include('header')-%>
-<style>
-    .clr{
-        display: none;
-    }
-    .disbtn {
-        display: block;
-    }
-    
-</style>
+    <style>
+        .clr {
+            display: none;
+        }
+
+        .disbtn {
+            display: block;
+        }
+    </style>
     <!DOCTYPE html>
     <html>
 
@@ -80,32 +80,35 @@
                                         <%=element.product.name%>
                                     </h6>
                                 </div>
-                                <span class="text-muted">Rs.<%=element.product.price%> X <%=element.quantity%></span>
+                                <span class="text-muted">Rs.<%=element.product.discountedPrice%> X <%=element.quantity%>
+                                </span>
 
                             </li>
                             <%})%>
-                                <!-- <li class="list-group-item d-flex justify-content-between bg-light">
-                    <div class="text-success">
-                        <h6 class="my-0">Promo code</h6>
-                        <small>EXAMPLECODE</small>
-                    </div>
-                    <span class="text-success">-$5</span>
-                </li> -->
+                                <li class="list-group-item d-flex justify-content-between bg-light">
+                                    <div class="text-success">
+                                        <h6 class="my-0">Promo code</h6>
+                                        <small>EXAMPLECODE</small>
+                                    </div>
+                                    <span class="text-success">-$5</span>
+                                </li>
                                 <li class="list-group-item d-flex justify-content-between">
-                                    <span>Total (INR)</span>
-                                    <strong>
+                                    <input type="text" id="sum" value="<%=total%>" hidden>
+                                    <span >Total (INR)</span>
+                                    
+                                    <strong id="total">
                                         <%=total%>
                                     </strong>
                                 </li>
                     </ul>
-                    <!-- <form class="card p-2">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Promo code">
-                    <div class="input-group-append">
-                        <button type="submit" class="btn btn-secondary">Redeem</button>
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Promo code" name="promo" id="promocode">
+                        
+                        <div class="input-group-append">
+                        <button type="submit" class="btn btn-secondary" onclick="addcoupon()">Redeem</button>
+                        <p id="msg" style="color:rgb(255, 0, 0) "></p>
+                        </div>
                     </div>
-                </div>
-            </form> -->
                 </div>
                 <div>
 
@@ -191,7 +194,7 @@
                                 <div class="d-block my-3">
                                     <div class="custom-control custom-radio">
                                         <input id="credit" name="paymentmethod" type="radio"
-                                            class="custom-control-input"  value="COD" onclick="displayCheckout()">
+                                            class="custom-control-input" value="COD" onclick="displayCheckout()">
                                         <label class="custom-control-label" for="credit">CASH ON DELIVERY</label>
                                     </div>
                                     <div class="custom-control custom-radio">
@@ -202,45 +205,21 @@
                                     <div class="custom-control custom-radio">
                                         <input id="debit" name="paymentmethod" type="radio" class="custom-control-input"
                                             value="Paypal" onclick="displayPaypal()">
-                                        <label class="custom-control-label" for="debit"
-                                            >Paypal</label>
+                                        <label class="custom-control-label" for="debit">Paypal</label>
                                     </div>
                                 </div>
-                                <!-- <div class="row">
-                    <div class="col-md-6 mb-3">
-                        <label for="cc-name">Name on card</label>
-                        <input type="text" class="form-control" id="cc-name" placeholder="" required="">
-                        <small class="text-muted">Full name as displayed on card</small>
-                        <div class="invalid-feedback"> Name on card is required </div>
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <label for="cc-number">Credit card number</label>
-                        <input type="text" class="form-control" id="cc-number" placeholder="" required="">
-                        <div class="invalid-feedback"> Credit card number is required </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3 mb-3">
-                        <label for="cc-expiration">Expiration</label>
-                        <input type="text" class="form-control" id="cc-expiration" placeholder="" required="">
-                        <div class="invalid-feedback"> Expiration date required </div>
-                    </div>
-                    <div class="col-md-3 mb-3">
-                        <label for="cc-cvv">CVV</label>
-                        <input type="text" class="form-control" id="cc-cvv" placeholder="" required="">
-                        <div class="invalid-feedback"> Security code required </div>
-                    </div>
-                </div> -->
                                 <hr class="mb-4">
                                 <!-- Replace "test" with your own sandbox Business account app client ID -->
-                                <script src="https://www.paypal.com/sdk/js?client-id=AZF7XqQybNKOpfo9AoGpF4DleAALQvLBFvYlbtLhFCUBVeeHWUMNBCxK53lbmjg7T9Hy7HuOnND-mj8H&currency=USD"></script>
+                                <script
+                                    src="https://www.paypal.com/sdk/js?client-id=AZF7XqQybNKOpfo9AoGpF4DleAALQvLBFvYlbtLhFCUBVeeHWUMNBCxK53lbmjg7T9Hy7HuOnND-mj8H&currency=USD"></script>
                                 <!-- Set up a container element for the button -->
                                 <div id="paypal-button-container" class="clr"></div>
                                 <div id="checkout-button" class="clr">
-                                    <button class="btn btn-primary btn-lg btn-block" type="submit" id="placeorder" >Continue
-                                    to checkout</button>
+                                    <button class="btn btn-primary btn-lg btn-block" type="submit"
+                                        id="placeorder">Continue
+                                        to checkout</button>
                                 </div>
-                                
+
                         </form>
                     </div>
                 </div>
@@ -260,9 +239,9 @@
                     success: (response) => {
                         if (response.cod_sucess) {
                             location.href = '/order-placed'
-                        } else if(response.paypal){
-                           location.href = '/order-placed'
-                        }else{
+                        } else if (response.paypal) {
+                            location.href = '/order-placed'
+                        } else {
                             razorPayment(response)
                         }
                     }
@@ -339,6 +318,25 @@
                 list1.remove('disbtn')
                 list2.add('disbtn')
 
+            }
+
+            function addcoupon() {
+            let total = document.getElementById('sum').value
+            let promo = document.getElementById('promocode')
+            $.ajax({
+                url: '/checkpromo',
+                method: 'post',
+                data: { promo: promo.value},
+                success: (response) => {
+                    console.log(response);
+                    if (response.status == false) {
+                        let error = document.getElementById('msg')
+                        error.innerHTML = 'Enter valid Promocode'
+                    } else {
+                        document.getElementById('total').innerHTML =total - response.discount;
+                    }
+                }
+            })
             }
         </script>
     </head>
