--- a/Project/views/admin/add_offer.ejs
+++ b/Project/views/admin/add_offer.ejs
@@ -67,70 +67,82 @@
             <div class="container-fluid px-4">
 
                 <div class="row my-5">
-                    
-                        <div class="card-body">
-                            <form action="/admin/add_offer" method="post">
 
-                                <!-- <p class="text-success">Category Added</p> -->
+                    <div class="card-body">
+                        <form id="offeradd">
 
-                                <div class="row">
-                                    <div class="form-group col-md-6">
-                                        <label for="example-text-input" class="col-sm-12 col-form-label">Offer
-                                            Name</label>
-                                        <div class="col-sm-12">
-                                            <input class="form-control" placeholder="Enter Offer name" type="text"
-                                                name="Offername">
-                                            <!-- {{!-- <span id="username-err" class=" text-danger"></span> --}} -->
-                                        </div>
-                                    </div>
-                                    <div class="form-group col-md-6">
-                                        <label for="example-text-input"
-                                            class="col-sm-12 col-form-label">Discount</label>
-                                        <div class="col-sm-12">
-                                            <input class="form-control" placeholder="Enter discount rate" type="number"
-                                                name="discountRate">
-                                            <!-- {{!-- <span id="username-err" class=" text-danger"></span> --}} -->
-                                        </div>
-                                    </div>
-                                    <div class="text-right mt-3 col-md-1">
-                                        <!-- <button type="submit" class="btn btn-light waves-effect mr-4">Cancel</button> -->
-                                        <button type="submit"
-                                            class="btn btn-success waves-effect waves-light">Save</button>
+                            <!-- <p class="text-success">Category Added</p> -->
 
+                            <div class="row">
+                                <div class="form-group col-md-12">
+                                    <label for="example-text-input" class="col-sm-12 col-form-label">Offer
+                                        Name</label>
+                                    <div class="col-sm-12">
+                                        <input class="form-control" placeholder="Enter Offer name" type="text"
+                                            name="Offername">
+                                        <!-- {{!-- <span id="username-err" class=" text-danger"></span> --}} -->
                                     </div>
                                 </div>
+                                <div class="form-group col-md-12">
+                                    <label for="example-text-input" class="col-sm-12 col-form-label">Discount</label>
+                                    <div class="col-sm-12">
+                                        <input class="form-control" placeholder="Enter discount rate" type="number"
+                                            name="discountRate">
+                                    </div>
+                                </div>
+                                <div class="form-group col-md-12">
+                                    <label for="example-text-input" class="col-sm-12 col-form-label">Expire date</label>
+                                    <div class="col-sm-12">
+                                        <input class="form-control" type="date" name="date">
+                                    </div>
+                                </div>
+                                <div class="text-right mt-3 col-md-1">
+                                    <button type="submit" class="btn btn-success waves-effect waves-light"
+                                        onclick="addoffer()">Save</button>
+                                </div>
+                            </div>
 
-                            </form>
-                        </div>
-
+                        </form>
                     </div>
+
                 </div>
-            
+            </div>
+
             <!-- end col -->
-            
+
 
             <div class="container-fluid px-4">
 
                 <div class="row my-5">
                     <h3 class="fs-4 mb-3">Offers</h3>
                     <div class="col">
+
                         <table class="table bg-white rounded shadow-sm  table-hover">
                             <thead>
                                 <tr>
                                     <th>Name</th>
                                     <th>Offer</th>
+                                    <th>Expire</th>
                                     <th>Action</th>
-
                                 </tr>
                             </thead>
                             <tbody>
-                                <td></td>
-                                <td></td>
-                                <td>
-                                    <button class="btn btn-danger"
-                                        onclick="deleteCatOffer('{{this._id}}')">Remove</button>
-                                </td>
-
+                                <%offers.forEach((element)=>{%>
+                                    <tr>
+                                        <td>
+                                            <%=element.offer%>
+                                        </td>
+                                        <td>
+                                            <%=element.discount%>
+                                        </td>
+                                        <td>
+                                            <%=element.date%>
+                                        </td>
+                                        <td>
+                                            <button class="btn btn-danger" onclick="deleteCatOffer()">Remove</button>
+                                        </td>
+                                    </tr>
+                                    <%})%>
                             </tbody>
                         </table>
 
@@ -151,6 +163,29 @@
     </script>
 
     <script>
+
+        function addoffer() {
+            let offer = document.getElementById('Offername')
+            let discount = document.getElementById('discountRate')
+            $.ajax({
+                url: '/admin/add-coupon',
+                method: 'post',
+                data: $('#offeradd').serialize(),
+                success: (response) => {
+                    // console.log(response);
+                    // if (response.status == false) {
+                    //     let error = document.getElementById('error-msg')
+                    //     error.innerHTML = 'This name is already present'
+                    // } else {
+                    //     location.href = '/admin/category'
+                    // }
+
+                }
+
+            })
+        }
+
+
         function deleteCatOffer(id) {
             console.log(id)
             console.log("test id")
