--- a/Project/views/admin/dashboard.ejs
+++ b/Project/views/admin/dashboard.ejs
@@ -80,13 +80,30 @@
 
                             </tbody>
                         </table>
+                        <div class="row" style="  width: 77rem;">
+                            <div class="col-sm-6">
+                              <div class="bg-light text-center rounded p-4">
+                                <div class="d-flex align-items-center justify-content-between mb-4">
+                                  <h6 class="mb-0">Daily sales</h6>
+                        
+                                </div>
+                                <canvas id="myChart" width="400" height="400"></canvas>
+                              </div>
+                            </div>
+                        
+                        
+                            <!-- Sales Chart End -->
+                        
+                            <div class="bg-light rounded h-100 p-4 col-sm-6 ">
+                              <h6 class="mb-4">Monthly sales</h6>
+                              <canvas id="Chart"></canvas>
+                            </div>
 
-
-                        <div class="col-md-6 pt-4" style=" height: 100%;">
-                            <canvas id="myChart" width="400" height="400"></canvas>
-                            <canvas id="Chart"></canvas>
-                            <canvas id="Chartz" width="400" height="400"></canvas>
-                        </div>
+                            <div class="bg-light rounded h-100 p-4 col-sm-6 " >
+                                <h6 class="mb-4">Yearly sales</h6>
+                                <canvas id="Chartz" width="400" height="400"></canvas>
+                              </div>
+                          </div>
                     </div>
 
                 </div>
@@ -97,170 +114,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        var el = document.getElementById("wrapper");
-        var toggleButton = document.getElementById("menu-toggle");
-        let myChart = document.getElementById('myChart')
-        let Charts = document.getElementById('Chart')
-        let chartz = document.getElementById('Chartz')
+    <script src="/static/javascripts/checkout.js"></script>
 
-
-        toggleButton.onclick = function () {
-            el.classList.toggle("toggled");
-        };
-
-
-        fetch('/admin/dashboard/day', {
-            method: 'get',
-        }).then((val) => val.json())
-            .then((data) => {
-                // console.log(data);
-                let xaxis = []
-                let countss = []
-                for (const val of data) {
-                    let date = `${val.detail.day}/${val.detail.month}/${val.detail.year}`
-                    xaxis.push(date)
-                    countss.push(val.count)
-                }
-
-                const masspopChart = new Chart(myChart, {
-                    type: 'bar',
-                    data: {
-                        labels: [...xaxis],
-                        datasets: [{
-                            label: 'Number of orders',
-                            data: [...countss],
-                            backgroundColor: [
-                                'rgba(255, 99, 132, 0.2)',
-                                'rgba(54, 162, 235, 0.2)',
-                                'rgba(245, 125, 75, 1.2)',
-                                'rgb(255, 99, 132)',
-                                'rgb(54, 162, 235)',
-                                'rgb(255, 205, 86)'
-                            ],
-                            borderColor: [
-                                'rgba(255, 99, 132, 1)',
-                                'rgba(54, 162, 235, 1)',
-                                'rgba(255, 206, 86, 1)',
-                                'rgba(75, 192, 192, 1)',
-                                'rgba(153, 102, 255, 1)',
-                                'rgba(255, 159, 64, 1)'
-                            ],
-                            borderWidth: 1
-                        }]
-                    },
-                    options: {
-                        scales: {
-                            y: {
-                                beginAtZero: true
-                            }
-                        }
-                    }
-                })
-            })
-
-
-        fetch('/admin/dashboard/month', {
-            method: "get",
-        }).then(data => data.json()).then((data) => {
-            console.log(data);
-
-            let xaxis = []
-            let countss = [] 
-            var months = [ "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December" ];
-            for (const val of data) {
-                let month= `${val.detail.month}`
-                let m = months[month]
-                xaxis.push(m)
-                countss.push(val.count)
-            }
-
-            const masspopChart = new Chart(chartz, {
-                type: 'bar',
-                data: {
-                    labels: [...xaxis],
-                    datasets: [{
-                        label: 'Number of orders in a week',
-                        data: [...countss],
-                        backgroundColor: [
-                            'rgba(255, 99, 132, 0.2)',
-                            'rgba(54, 162, 235, 0.2)',
-                            'rgba(245, 125, 75, 1.2)',
-                        ],
-                        borderColor: [
-                            'rgba(255, 99, 132, 1)',
-                            'rgba(54, 162, 235, 1)',
-                            'rgba(255, 206, 86, 1)',
-                            'rgba(75, 192, 192, 1)',
-                            'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
-                        ],
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            })
-
-        })
-
-
-        fetch('/admin/dashboard/week', {
-            method: "get",
-        }).then(data => data.json()).then((data) => {
-            // console.log(data);
-
-            let xaxis = []
-            let countss = []
-            for (const val of data) {
-                let week = `${val.detail.week}`
-                xaxis.push(week)
-                countss.push(val.count)
-            }
-
-            const masspopChart = new Chart(Charts, {
-                type: 'pie',
-                data: {
-                    labels: [...xaxis],
-                    datasets: [{
-                        label: 'Number of orders in a week',
-                        data: [...countss],
-                        backgroundColor: [ 
-                            'rgba(255, 99, 132, 0.2)',
-                            'rgba(54, 162, 235, 0.2)',
-                            'rgba(245, 125, 75, 1.2)',
-                        ],
-                        borderColor: [
-                            'rgba(255, 99, 132, 1)',
-                            'rgba(54, 162, 235, 1)',
-                            'rgba(255, 206, 86, 1)',
-                            'rgba(75, 192, 192, 1)',
-                            'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
-                        ],
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            })
-
-        })
-    </script>
-
-    </script>
-
-
-    </div>
 
     <%-include('footer')-%>
