--- a/Project/views/user/landingPage.ejs
+++ b/Project/views/user/landingPage.ejs
@@ -212,7 +212,7 @@
                                     </p>
                                     <span class="fw-bold d-block text-success">
                                         <del class="text-danger">Rs:<%=element.price%></del> Rs.<%=parseInt(element.price - (element.price * element.offer[0]/100))%>
-                                    </span>
+                                    </span> 
                                     <a href="productDetails/<%=element._id%>" class="btn btn-primary mt-3">BUY NOW</a>
                                     <button class="btn btn-primary mt-3" onclick="addtowhislist(`<%=element._id%>`)">wishlist</button>
                                 </div>
@@ -251,9 +251,8 @@
             <div class="container">
                 <div class="row text-white g-4">
                     <div class="col-md-6 col-lg-3">
-                        <a class="text-uppercase text-decoration-none brand text-white" href="index.html">Attire</a>
-                        <p class="text-white text-muted mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Nostrum mollitia quisquam veniam odit cupiditate, ullam aut voluptas velit dolor ipsam?</p>
+                        <a class="text-uppercase text-decoration-none brand text-white" href="index.html">GOCYCLE/a>
+                        
                     </div>
 
                     <div class="col-md-6 col-lg-3">
