--- a/Project/views/admin/category.ejs
+++ b/Project/views/admin/category.ejs
@@ -89,7 +89,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
-                                        <button class="btn btn-primary" onclick="addcategory()">submit</button>
+                                        <button class="btn btn-primary" onclick="addcategory()" type="submit">submit</button>
 
                                     </div>
 
