--- a/Project/views/user/checkoutpage.ejs
+++ b/Project/views/user/checkoutpage.ejs
@@ -27,26 +27,7 @@
                     <span class="text-uppercase fw-lighter ms-2">GOCYCLE</span>
                 </a>
 
-                <div class="order-lg-2 nav-btns">
-                    <button type="button" class="btn position-relative">
-                        <a href="/cart" class="fa fa-shopping-cart"></a>
-                        <span class="position-absolute top-0 start-100 translate-middle badge bg-primary"></span>
-                        <span class="badge badge-light">
-
-                        </span>
-                    </button>
-                    <button type="button" class="btn position-relative">
-                        <i class="fa fa-heart"></i>
-                        <span class="position-absolute top-0 start-100 translate-middle badge bg-primary"></span>
-                    </button>
-
-                    <button type="button" class="btn position-relative">
-                        <a href="/profile" class="fa-solid fa-user"></a>
-                    </button>
-
-
-
-                </div>
+            
 
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navMenu">
@@ -85,13 +66,13 @@
 
                             </li>
                             <%})%>
-                                <li class="list-group-item d-flex justify-content-between bg-light">
+                                <!-- <li class="list-group-item d-flex justify-content-between bg-light">
                                     <div class="text-success">
                                         <h6 class="my-0">Promo code</h6>
                                         <small>EXAMPLECODE</small>
                                     </div>
                                     <span class="text-success">-$5</span>
-                                </li>
+                                </li> -->
                                 <li class="list-group-item d-flex justify-content-between">
                                     <input type="text" id="sum" value="<%=total%>" hidden>
                                     <span >Total (INR)</span>
@@ -102,8 +83,7 @@
                                 </li>
                     </ul>
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Promo code" name="promo" id="promocode">
-                        
+                        <input type="text" class="form-control" placeholder="Promo code" name="promo" id="promocode">       
                         <div class="input-group-append">
                         <button type="submit" class="btn btn-secondary" onclick="addcoupon()">Redeem</button>
                         <p id="msg" style="color:rgb(255, 0, 0) "></p>
@@ -146,6 +126,8 @@
                     <div class="col-md-8 order-md-1">
                         <h4 class="mb-3">Billing address</h4>
                         <form class="needs-validation" id="checkout-form">
+                            <input type="text" id="couponvalue" name="coupon" hidden>
+                            <input type="text" name="couponusing" id="couponusing" hidden>
                             <div class="row">
                                 <div class="col-md-6 mb-3">
                                     <label for="firstName">First name</label>
@@ -160,7 +142,6 @@
                                     <div class="invalid-feedback"> Valid last name is required. </div>
                                 </div>
                             </div>
-
 
                             <div class="mb-3">
                                 <label for="address">Address</label>
@@ -219,7 +200,6 @@
                                         id="placeorder">Continue
                                         to checkout</button>
                                 </div>
-
                         </form>
                     </div>
                 </div>
@@ -227,10 +207,12 @@
         </div>
 
         <script src="/static/javascripts/paypal.js"></script>
+        <!-- <script src="/static/javascripts/checkout.js"></script> -->
 
         <SCript>
 
             $('#checkout-form').submit((e) => {
+                console.log('im heweweeeeeeeeeeeeeee');
                 e.preventDefault()
                 $.ajax({
                     url: '/place-order',
@@ -246,9 +228,8 @@
                         }
                     }
                 })
-            })
-
-
+            }) 
+            
             function addtofields(firstname, lastname, address, town, pin) {
                 let firstnames = document.getElementById('firstName').value = firstname
                 let lastnames = document.getElementById('lastName').value = lastname
@@ -323,6 +304,8 @@
             function addcoupon() {
             let total = document.getElementById('sum').value
             let promo = document.getElementById('promocode')
+            let coupon = document.getElementById('couponvalue')
+            let couponusing = document.getElementById('couponusing')
             $.ajax({
                 url: '/checkpromo',
                 method: 'post',
@@ -333,7 +316,9 @@
                         let error = document.getElementById('msg')
                         error.innerHTML = 'Enter valid Promocode'
                     } else {
-                        document.getElementById('total').innerHTML =total - response.discount;
+                        let a = document.getElementById('total').innerHTML =total - response.discount;
+                        coupon.value = a
+                        couponusing.value = response.discount
                     }
                 }
             })
@@ -342,4 +327,4 @@
     </head>
 
     </html>
-    <%-include('footer')-%>
+    <%-include('footer')-%> 
