--- a/Project/views/user/edituser.ejs
+++ b/Project/views/user/edituser.ejs
@@ -1,5 +1,41 @@
 <%-include('header')-%>
-    <section class="ftco-section">
+<nav class="navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
+    <div class="container">
+        <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="/">
+            <span class="text-uppercase fw-lighter ms-2">GOCYCLE</span>
+        </a>
+
+        <div class="order-lg-2 nav-btns">
+            <button type="button" class="btn position-relative">
+                <i class="fa fa-heart"></i>
+                <span class="position-absolute top-0 start-100 translate-middle badge bg-primary"></span>
+            </button>
+            <button type="button" class="btn position-relative">
+                <i class="fa fa-search"></i>
+            </button>
+
+        </div>
+
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse order-lg-1" id="navMenu">
+            <ul class="navbar-nav mx-auto text-center">
+                <li class="nav-item px-2 py-2">
+                    <a class="nav-link text-uppercase text-dark" href="/">home</a>
+                </li>
+                <li class="nav-item px-2 py-2">
+                    <a class="nav-link text-uppercase text-dark" href="#collection">collection</a>
+                </li>
+                <li class="nav-item px-2 py-2">
+                    <a class="nav-link text-uppercase text-dark" href="#special">specials</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+    <section class="ftco-section" style="padding-top: 100px;">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-8 ftco-animate">
