--- a/Project/views/user/oderdetails.ejs
+++ b/Project/views/user/oderdetails.ejs
@@ -79,7 +79,28 @@
                             <td>
                                 <%=new Date(orders.date).toDateString()%>
                             </td>
-                            <td scope="col"><a href="/product/<%=orders._id%>" class="btn btn-info float-left">View Product</a></td>
+                            <!-- <td scope="col"><a href="/product/<%=orders._id%>" class="btn btn-info float-left">View Product</a></td> -->
+                            <td scope="col">
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="viewdetail(`<%=orders._id%>`)">View Details</button>
+                                
+                                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                  <div class="modal-dialog">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                      </div>
+                                      <div class="modal-body">
+                                      </div>
+                                      <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Send message</button>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                            
+                            </td>
                             <%if(orders.ordercanceled === false){%>
                             <td scope="col"><button class="btn btn-danger  " onclick="confirmDelete('<%=orders._id%>')">Cancel Order</button></td>
                               <%}else{%>
@@ -119,8 +140,35 @@
         }
     })
   }
+  
+  function viewdetail(id) {
+    $.ajax({
+        url:`/product/${id}`,
+        method:'get',
+        success:(response)=>{
+            console.log(response);
+            alert('h9')
+        }
+    })
+    
+  }
 
-  new Date()
+  var exampleModal = document.getElementById('exampleModal')
+exampleModal.addEventListener('show.bs.modal', function (event) {
+  // Button that triggered the modal
+  var button = event.relatedTarget
+  // Extract info from data-bs-* attributes
+  var recipient = button.getAttribute('data-bs-whatever')
+  // If necessary, you could initiate an AJAX request here
+  // and then do the updating in a callback.
+  //
+  // Update the modal's content.
+  var modalTitle = exampleModal.querySelector('.modal-title')
+  var modalBodyInput = exampleModal.querySelector('.modal-body input')
+
+  modalTitle.textContent = 'New message to ' + recipient
+  modalBodyInput.value = recipient
+})
 </script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
