--- a/Project/views/admin/orderMangement.ejs
+++ b/Project/views/admin/orderMangement.ejs
@@ -78,6 +78,7 @@
 
                                     <th scope="col">Option</th>
                                     <th scope="col">Change status</th>
+                                    <th>Details</th>
                                     <!-- <th scope="col">Option</th> -->
                                 </tr>
                             </thead>
@@ -88,14 +89,14 @@
                                             <%=i+1%>
                                         </th>
                                         <td>
-                                            <%=orders[i].paymentMethod%>
+                                            <%=orders[i].name%>
                                         </td>
                                         <td>
                                             <%=orders[i].totalAmount%>
                                         </td>
 
                                         <td>
-                                            <%=orders[i].deliveryDetails.state%>
+                                            <%=orders[i].state%>
                                         </td>
                                         <%if(orders[i].ordercanceled===false){%>
                                             <td>
@@ -127,7 +128,7 @@
                                                                                         action="/admin/change-status/<%=orders[i]._id%>"
                                                                                         method="post">
                                                                                         <select
-                                                                                            class=" form-select-lg mb-3"
+                                                                                            class=" form-select mb-1"
                                                                                             name="status">
                                                                                             <option name="" value="0"
                                                                                                 selected>Select
@@ -146,11 +147,54 @@
                                                                                 </td>
                                                                                 <%}%>
 
-                                                                                    </td>
+
 
                                                                                     <td>
+                                                                                        <button type="button"
+                                                                                            class="btn btn-primary"
+                                                                                            data-bs-toggle="modal"
+                                                                                            data-bs-target="#exampleModal"
+                                                                                             onclick="findproductdetail(`<%=orders[i]._id%>`,`<%=i%>`)">VIEW DETAIL</button>
 
+                                                                                        <div class="modal fade"
+                                                                                            id="exampleModal"
+                                                                                            tabindex="-1"
+                                                                                            aria-labelledby="exampleModalLabel"
+                                                                                            aria-hidden="true">
+                                                                                            <div class="modal-dialog">
+                                                                                                <div
+                                                                                                    class="modal-content">
+                                                                                                    <div
+                                                                                                        class="modal-header">
+                                                                                                        <h5 class="modal-title"
+                                                                                                            id="exampleModalLabel">
+                                                                                                            New message
+                                                                                                        </h5>
+                                                                                                        <button
+                                                                                                            type="button"
+                                                                                                            class="btn-close"
+                                                                                                            data-bs-dismiss="modal"
+                                                                                                            aria-label="Close"></button>
+                                                                                                    </div>
+                                                                                                    <div
+                                                                                                        class="modal-body">
+                                                                                                       <div id="hello">
+
+
+                                                                                                       </div>
+                                                                                                    </div>
+                                                                                                    <div
+                                                                                                        class="modal-footer">
+                                                                                                        <button
+                                                                                                            type="button"
+                                                                                                            class="btn btn-secondary"
+                                                                                                            data-bs-dismiss="modal">Close</button>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                            </div>
+                                                                                        </div>
                                                                                     </td>
+
 
                                     </tr>
                                     <%}%>
@@ -158,7 +202,7 @@
                         </table>
 
                         <% if (pages> 0) { %>
-                            <ul class="pagination text-center">
+                            <ul class="pagination text-center" >
                                 <% if (current==1) { %>
                                     <li class="disabled"><a>First</a></li>
                                     <% } else { %>
@@ -256,6 +300,32 @@
                     ).then(() => {
                         location.href = `/admin/cancelorder/${proId}`
                     })
+                }
+            })
+        }
+
+        function findproductdetail(id,i){
+            console.log(id,i);
+            let hello = document.getElementById('hello')
+            hello.innerHTML = ''
+            $.ajax({  
+                url:`/admin/detail-view/${id}`,
+                method:'get',
+                success:(response)=>{
+                    console.log(response);
+                    for (let i = 0; i < response.length; i++) {
+                        hello.innerHTML += ` <h5>${response[i].name}</h5>
+                        <img src="/static/product-image/${response[i].image}.jpg" alt="" style="width: 100px;height: 75px;">
+                        <h6 class="text-danger">Price: ${response[i].totalAmount}</h6>
+                        <h6 class="text-success">Discount Price: ${response[i].discount}</h6>
+                        <p>Category: ${response[i].category}</p>
+                        <p>status: ${response[i].status}</p>
+                        <p>paymentMethod: ${response[i].payment}</p>
+                        <p>address: ${response[i].address} ${response[i].state} ${response[i].pincode}</p>
+                        <hr>
+                        `
+                    }
+                    // hello.innerHTML = 
                 }
             })
         }
