added categroy wise chart

--- a/Project/views/admin/dashboard.ejs
+++ b/Project/views/admin/dashboard.ejs
@@ -102,7 +102,12 @@
                             <div class="bg-light rounded h-100 p-4 col-sm-6 " >
                                 <h6 class="mb-4">Yearly sales</h6>
                                 <canvas id="Chartz" width="400" height="400"></canvas>
-                              </div>
+                            </div>
+
+                            <div class="bg-light rounded h-100 p-4 col-sm-6 " >
+                                <h6 class="mb-4">Category sales</h6>
+                                <canvas id="CategoryChartz" width="400" height="400"></canvas>
+                            </div>
                           </div>
                     </div>
 
