--- a/Project/views/admin/dashboard.ejs
+++ b/Project/views/admin/dashboard.ejs
@@ -71,17 +71,12 @@
                                 </tr>
 
                             </thead>
-                            <!-- <select class=" form-select-lg mb-3" name="category">
-                                <option value="day">DAY</option>
-                                <option value="week">WEEK</option>
-                                <option value="year">YEAR</option>
-                        </select> -->
                             <tbody>
 
                             </tbody>
                         </table>
                         <div class="row" style="  width: 77rem;">
-                            <div class="col-sm-6">
+                            <div class="col-sm-6 mb-2 col-12 col-lg-6">
                               <div class="bg-light text-center rounded p-4">
                                 <div class="d-flex align-items-center justify-content-between mb-4">
                                   <h6 class="mb-0">Daily sales</h6>
@@ -91,23 +86,39 @@
                               </div>
                             </div>
                         
+                            <div class="col-sm-6 mb-2 col-12 col-lg-6">
+                                <div class="bg-light text-center rounded p-4">
+                                  <div class="d-flex align-items-center justify-content-between mb-4">
+                                    <h6 class="mb-0">Weekly sales</h6>
+                          
+                                  </div>
+                                  <canvas id="Chart"  width="400" height="400"></canvas>
+                                </div>
+                              </div>
                         
-                            <!-- Sales Chart End -->
-                        
-                            <div class="bg-light rounded h-100 p-4 col-sm-6 ">
-                              <h6 class="mb-4">Monthly sales</h6>
-                              <canvas id="Chart"></canvas>
-                            </div>
+                            
 
-                            <div class="bg-light rounded h-100 p-4 col-sm-6 " >
-                                <h6 class="mb-4">Yearly sales</h6>
-                                <canvas id="Chartz" width="400" height="400"></canvas>
-                            </div>
+                            <div class="col-sm-6 mb-2 col-12 col-lg-6">
+                                <div class="bg-light text-center rounded p-4">
+                                  <div class="d-flex align-items-center justify-content-between mb-4">
+                                    <h6 class="mb-4">Yearly sales</h6>
+                          
+                                  </div>
+                                  <canvas id="Chartz" width="400" height="400"></canvas>
+                                </div>
+                              </div>
+                              <div class="col-sm-6 mb-2 col-12 col-lg-6">
+                                <div class="bg-light text-center rounded p-4">
+                                  <div class="d-flex align-items-center justify-content-between mb-4">
+                                    <h6 class="mb-4">Category sales</h6>
+                          
+                                  </div>
+                                  <canvas id="CategoryChartz" width="400" height="400"></canvas>
+                                </div>
+                              </div>
+                            
 
-                            <div class="bg-light rounded h-100 p-4 col-sm-6 " >
-                                <h6 class="mb-4">Category sales</h6>
-                                <canvas id="CategoryChartz" width="400" height="400"></canvas>
-                            </div>
+                            
                           </div>
                     </div>
 
