--- a/Project/views/user/profile.ejs
+++ b/Project/views/user/profile.ejs
@@ -57,8 +57,8 @@
 				<div class="shadow rounded mt-3 p-3">
 					<h6 class="fw-normal"><a href="/orders" class="text-secondary">My Orders </a></h6>
 					<h6 class="fw-normal"><a href="/address" class="text-secondary">Address</a></h6>
-					<h6 class="fw-normal"><a href="/address" class="text-secondary">Wallet <span
-					class="ms-3 text-success fw-bold"> <small>RS</small> <span></span></span></a></h6>
+					<h6 class="fw-normal"><a  class="text-secondary">Wallet <span
+					class="ms-3 text-success fw-bold"> <small>RS</small> <span><%=user.wallet%></span></span></a></h6>
 					<h6 class="fw-normal"><a href="/changepassword" class="text-secondary">Change Password</a></h6>
 				</div>
 			</div>
