--- a/Project/views/user/signup.ejs
+++ b/Project/views/user/signup.ejs
@@ -96,9 +96,15 @@
                   <input  type="password" name="password" id="form3Example4" class="form-control" />
                   <label class="form-label" for="form3Example4">Password</label>
                 </div>
+                <div class="form-outline mb-4">
+                  <input  type="text" name="referal" id="form3Example4" class="form-control" />
+                  <label class="form-label" for="form3Example4">Referal Code</label>
+                </div>
+
                 <div id="emailmsg" class="fs-0" style="color:rgb(158, 44, 19);display:none">Please fill the required</div>
                 <p id="error-msg" class="fs-6" style="color:rgb(169, 40, 53) "><%=eamilNotFound%></p>
-
+                <p id="error-msg" class="fs-6" style="color:rgb(169, 40, 53) "><%=referalError%></p>
+               
                 <!-- Checkbox -->
                 <div class="form-check d-flex justify-content-center mb-4">
                   <input class="form-check-input me-2"  type="checkbox" value="" id="form2Example33" checked />
