--- a/Project/views/user/productDetails.ejs
+++ b/Project/views/user/productDetails.ejs
@@ -12,7 +12,7 @@
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white py-4 fixed-top">
     <div class="container">
-      <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="index.html">
+      <a class="navbar-brand d-flex justify-content-between align-items-center order-lg-0" href="/">
         <span class="text-uppercase fw-lighter ms-2">GOCYCLE</span>
       </a>
 
@@ -25,7 +25,7 @@
           </span>
         </button>
         <button type="button" class="btn position-relative">
-          <i class="fa fa-heart"></i>
+          <a href="/wishlist" class="fa fa-heart"></a>
           <span class="position-absolute top-0 start-100 translate-middle badge bg-primary"></span>
         </button>
         <button type="button" class="btn position-relative">
