--- a/Project/views/admin/header.ejs
+++ b/Project/views/admin/header.ejs
@@ -35,6 +35,11 @@
   
   <!--Adding cropper CDN  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.css">
+
+  <!-- datatables -->
+  <link rel="stylesheet" type="text/css"
+      href="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/css/jquery.dataTables.css" />
+  <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.2.3/css/buttons.dataTables.min.css">
   
 </head>
 
