--- a/Project/views/user/landingPage.ejs
+++ b/Project/views/user/landingPage.ejs
@@ -210,11 +210,19 @@
                                     <p class="text-capitalize mt-3 mb-1 ">
                                         <%=element.name%>
                                     </p>
-                                    <span class="fw-bold d-block text-success">
-                                        <del class="text-danger">Rs:<%=element.price%></del> Rs.<%=parseInt(element.price - (element.price * element.offer[0]/100))%>
-                                    </span> 
+                                        <%if(element.offer[0]===0){%> 
+                                        <span class="fw-bold d-block text-success">
+                                        Rs.<%=parseInt(element.price - (element.price * element.offer[0]/100))%> </span> 
+                                        <%}else{%>
+                                        <span class="fw-bold d-block text-success"><del class="text-danger">Rs:<%=element.price%></del>
+                                        Rs.<%=parseInt(element.price - (element.price * element.offer[0]/100))%>
+                                        </span>
+                                        <%}%>
+                                   
                                     <a href="productDetails/<%=element._id%>" class="btn btn-primary mt-3">BUY NOW</a>
+                                    <%if (token) { %>
                                     <button class="btn btn-primary mt-3" onclick="addtowhislist(`<%=element._id%>`)">wishlist</button>
+                                    <%}%>
                                 </div>
 
                             </div>
